sticky nav with bootstrap

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
-        <nav class="main_nav ml-auto">
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <ul class="main_nav_list">
                 <li class="main_nav_item active"><a href="#">Home</a></li>
                 <li class="main_nav_item"><a href="#">About us</a></li>
