--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
-
-
 <body>
     <header>
         <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
-        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <nav class="main_nav ml-auto">
             <ul class="main_nav_list">
                 <li class="main_nav_item active"><a href="#">Home</a></li>
                 <li class="main_nav_item"><a href="#">About us</a></li>
