--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
     <header>
-        <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
-        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+                <a class="navbar-brand" href="#">
+                        <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
+                      </a>
             <ul class="main_nav_list">
                 <li class="main_nav_item active"><a href="#">Home</a></li>
                 <li class="main_nav_item"><a href="#">About us</a></li>
@@ -23,8 +25,11 @@
         </nav>
     </header>
 
+<!-- <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia qui nam ratione voluptatem enim vero quas consequuntur totam a dicta dolor consequatur, ipsam animi amet non similique nihil voluptatum sunt?</p>
+</div> -->
 
-    
+
     <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
