--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
         </nav>
     </header>
 
-    <div class="home_content">
-        <div class="home_content_inner">
-                <div class="home_text_large">Lemon Cheezy</div>
-            <div class="home_text_small">Easy Breezy</div>
+    <div class="home">
+            <div class="home_background" style="background-image:url(background_2.jpg)"></div>
+            <div class="slogan_content">
+                <div class="slogan_content_inner">
+                    <div class="slogan_text_large">Breeze</div>
+                    <div class="slogan_text_small">Breeze through Travel</div>
+                </div>
+            </div>
         </div>
-    </div>
-
 
 
     <script src="app.js"></script>
