--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Zephyr Airlines</title>
+    <title>About us</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,8 +19,8 @@
                 <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
             </a>
             <ul class="main_nav_list">
-                <li class="main_nav_item active"><a href="#">Home</a></li>
-                <li class="main_nav_item"><a href="about.html">About us</a></li>
+                <li class="main_nav_item active"><a href="index.html">Home</a></li>
+                <li class="main_nav_item"><a href="#">About us</a></li>
                 <li class="main_nav_item"><a href="#">Offers</a></li>
                 <li class="main_nav_item"><a href="#">News</a></li>
                 <li class="main_nav_item"><a href="#">Contact</a></li>
@@ -28,12 +28,6 @@
         </nav>
     </header>
 
-    <div class="home_content">
-        <div class="home_content_inner">
-                <div class="home_text_large">Lemon Cheezy</div>
-            <div class="home_text_small">Easy Breezy</div>
-        </div>
-    </div>
 
 
 
