--- a/destino/index.html
+++ b/destino/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Destino</title>
+<title>Mango</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Destino project">
+<meta name="description" content="Mango project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -286,7 +286,7 @@
 		<div class="video_background parallax-window" data-parallax="scroll" data-image-src="images/video.jpg" data-speed="0.8"></div>
 		<div class="video_content">
 			<div class="video_title">A day on the island</div>
-			<div class="video_subtitle">A trip organized by Destino's team</div>
+			<div class="video_subtitle">A trip organized by Mango's team</div>
 			<div class="video_play">
 				<a  class="video" href="https://www.youtube.com/watch?v=BzMLA8YIgG0">
 					<svg version="1.1" id="Layer_1" class="play_button" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -528,7 +528,7 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>destino</div>
+								<div>Mango</div>
 								<div>travel agency</div>
 								<div class="logo_image"><img src="images/logo.png" alt=""></div>
 							</div>
