--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="home_background" style="background-image:url(background_2.jpg)"></div>
             <div class="slogan_content">
                 <div class="slogan_content_inner">
-                    <div class="slogan_text_large">Breeze</div>
-                    <div class="slogan_text_small">Breeze through Travel</div>
+                    <div class="slogan_text_large">Easy Breezy</div>
+                    <div class="slogan_text_small">Cover Girl</div>
                 </div>
             </div>
         </div>
