--- a/destino/contact.html
+++ b/destino/contact.html
@@ -4,7 +4,7 @@
 <title>Contact</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Destino project">
+<meta name="description" content="Mango project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -26,7 +26,7 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>destino</div>
+								<div>Mango</div>
 								<div>travel agency</div>
 								<div class="logo_image"><img src="images/logo.png" alt=""></div>
 							</div>
@@ -280,7 +280,7 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<div>destino</div>
+								<div>Mango</div>
 								<div>travel agency</div>
 								<div class="logo_image"><img src="images/logo.png" alt=""></div>
 							</div>
