--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
             <ul class="main_nav_list">
                 <li class="main_nav_item active"><a href="#">Home</a></li>
-                <li class="main_nav_item"><a href="about.html">About us</a></li>
+                <li class="main_nav_item"><a href="about.html">About Us</a></li>
                 <li class="main_nav_item"><a href="#">Offers</a></li>
                 <li class="main_nav_item"><a href="#">News</a></li>
                 <li class="main_nav_item"><a href="#">Contact</a></li>
@@ -32,7 +32,7 @@
             <div class="home_background" style="background-image:url(background_2.jpg)"></div>
             <div class="slogan_content">
                 <div class="slogan_content_inner">
-                    <div class="slogan_text_large">Breeze</div>
+                    <div class="slogan_text_large">Breeeze</div>
                     <div class="slogan_text_small">Breeze through Travel</div>
                 </div>
             </div>
