changed home nav

--- a/index.html
+++ b/index.html
@@ -19,11 +19,51 @@
                 <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
             </a>
             <ul class="main_nav_list">
-                <li class="main_nav_item active"><a href="#">Home</a></li>
-                <li class="main_nav_item"><a href="about.html">About Us</a></li>
-                <li class="main_nav_item"><a href="#">Offers</a></li>
-                <li class="main_nav_item"><a href="#">News</a></li>
-                <li class="main_nav_item"><a href="#">Contact</a></li>
+				<li class="main_nav_item">
+					<div class="section">
+						<div class="section__item">
+							<a href="index.html" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">Home</span>
+							</a>
+						</div>
+					</div>
+				</li>
+				<li class="main_nav_item active">
+					<div class="section">
+						<div class="section__item">
+							<a href="about.html" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">About Us</span>
+							</a>
+						</div>
+					</div>
+				</li>
+				<li class="main_nav_item">
+					<div class="section">
+						<div class="section__item">
+							<a href="#" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">Offers</span>
+							</a>
+						</div>
+					</div>
+				</li>
+				<li class="main_nav_item">
+					<div class="section">
+						<div class="section__item">
+							<a href="#" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">News</span>
+							</a>
+						</div>
+					</div>
+				</li>
+				<li class="main_nav_item">
+					<div class="section">
+						<div class="section__item">
+							<a href="#" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">Contact</span>
+							</a>
+						</div>
+					</div>
+				</li>
             </ul>
         </nav>
     </header>
