Created all of the pages
Created all of the pages linked in the nav and edited their active styles to ensure the correct pages are displayed when clicked on.

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About us</title>
+    <title>Contact us</title>
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -28,7 +28,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="main_nav_item active">
+				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
 							<a href="about.html" class="sm-link sm-link_padding sm-link1">
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="main_nav_item">
+				<li class="main_nav_item active">
 					<div class="section">
 						<div class="section__item">
 							<a href="contact.html" class="sm-link sm-link_padding sm-link1">
