--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
             </a>
             <ul class="main_nav_list">
@@ -40,7 +40,7 @@
 				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
-							<a href="#" class="sm-link sm-link_padding sm-link1">
+							<a href="offers.html" class="sm-link sm-link_padding sm-link1">
 								<span class="sm-link__label">Offers</span>
 							</a>
 						</div>
@@ -49,7 +49,7 @@
 				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
-							<a href="#" class="sm-link sm-link_padding sm-link1">
+							<a href="news.html" class="sm-link sm-link_padding sm-link1">
 								<span class="sm-link__label">News</span>
 							</a>
 						</div>
@@ -58,7 +58,7 @@
 				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
-							<a href="#" class="sm-link sm-link_padding sm-link1">
+							<a href="contact.html" class="sm-link sm-link_padding sm-link1">
 								<span class="sm-link__label">Contact</span>
 							</a>
 						</div>
