search bar icon

--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
                 </div>
             </div>
         </div>
-
-
+<!-- Search Bar  -->
+<form id="content">
+	<input type="text" name="input" class="input" id="search-input">
+	<button type="reset" class="search" id="search-btn"></button>
+  </form>
+<!--  -->
     <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
