--- a/index.html
+++ b/index.html
@@ -76,7 +76,19 @@
                     <div class="slogan_text_small">Cover Girl</div>
                 </div>
             </div>
-        </div>
+		</div>
+		
+<div class="jumbotron">
+	<h1 class="display-3">Jumbo heading</h1>
+	<p class="lead">Jumbo helper text</p>
+	<hr class="my-2">
+	<p>More info</p>
+	<p class="lead">
+		<a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
+	</p>
+</div>
+
+
 <!-- Search Bar  -->
 <form id="content">
 	<input type="text" name="input" class="input" id="search-input">
