jumbotron & js for scrolling animation

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="">
             <a class="navbar-brand" href="index.html">
                 <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
             </a>
@@ -76,16 +75,17 @@
                     <div class="slogan_text_small">Cover Girl</div>
                 </div>
             </div>
-		</div>
-		
-<div class="jumbotron">
-	<h1 class="display-3">Jumbo heading</h1>
-	<p class="lead">Jumbo helper text</p>
-	<hr class="my-2">
-	<p>More info</p>
-	<p class="lead">
-		<a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-	</p>
+	</div>
+<div class="jumbotron jumbotron-fluid">
+	<div class="container">
+		<h1 class="display-3">Fluid jumbo heading</h1>
+		<p class="lead">Jumbo helper text</p>
+		<hr class="my-2">
+		<p>More info</p>
+		<p class="lead">
+			<a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
+		</p>
+	</div>
 </div>
 
 
