--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
             <div class="home_background" style="background-image:url(background_2.jpg)"></div>
             <div class="slogan_content">
                 <div class="slogan_content_inner">
-                    <div class="slogan_text_large">Easy Breezy</div>
-                    <div class="slogan_text_small">Cover Girl</div>
+                    <div class="slogan_text_large">Feeling Breezy</div>
+                    <div class="slogan_text_small">Easy Peasy</div>
                 </div>
             </div>
 	</div>
 <div class="jumbotron jumbotron-fluid">
 	<div class="container">
-		<h1 class="display-3">Fluid jumbo heading</h1>
-		<p class="lead">Jumbo helper text</p>
+		<h1 class="display-3">Zephyr Airlines</h1>
+		<p class="lead">Easy... Breezy</p>
 		<hr class="my-2">
 		<p>More info</p>
 		<p class="lead">
