--- a/offers.html
+++ b/offers.html
@@ -66,7 +66,90 @@
 				</li>
             </ul>
         </nav>
-    </header>
+	</header>
+	<!--  -->
+	<section id="section1"> 
+		<form id="regForm" name="regForm" method="post"></form> <!--action="mas_reg2.html"-->
+			  <h1>MAS22 Registration Form</h1>
+
+
+			  <fieldset id="contactInfo">
+					<label for="fnBox">First Name*</label>
+					<input name="firstName" id="fnBox" type="text" required />
+
+					<label for="lnBox">Last Name*</label>
+					<input name="lastName" id="lnBox" type="text" required />
+
+					<label for="groupBox">Company or University</label>
+					<input name="group" id="groupBox" type="text" />
+
+					<label for="mailBox">E-mail*</label>
+					<input name="email" id="mailBox" type="email" required />
+
+					<label for="phoneBox">Phone Number*</label>
+					<input name="phoneNumber" id="phoneBox" type="tel"
+						  pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$" required
+						  placeholder="(nnn) nnn-nnnn" />
+			  </fieldset>
+
+			  <fieldset id="confChoices">
+					<label for="sessionBox">Session Packs</label>
+					<select id="sessionBox" name="sessionOption" size="5" required>
+						  <option value="95">Exhibits Only ($95)</option>
+						  <option value="215">3 Session Pack ($215)</option>
+						  <option value="420">6 Session Pack ($420)</option>
+						  <option value="595">Session Pass ($595)</option>
+						  <option value="845">VIP Pass ($845)</option>
+					</select>
+					<label for="banquet">MAS22 Banquet ($55 ea.)</label>
+					<input type="number" min="0" max="10" id="banquetBox" name="banquetGuests" /><span>
+						  attendees</span>
+
+					<label for="mediaPack">MAS22 Media Pack ($115)</label>
+					<input type="checkbox" name="mediaPack" id="mediaCB" value="115" />
+
+			  </fieldset>
+			  <input id="regSubmit" type="submit" value="continue" />
+		</form>
+  </section>
+
+  <aside id="reg1Aside">
+		<table>
+			  <caption>Shopping Cart</caption>
+			  <tr>
+					<th>Name</th>
+					<td><span id="regName"></span></td>
+			  </tr>
+			  <tr>
+					<th>Company</th>
+					<td><span id="regGroup"></span></td>
+			  </tr>
+			  <tr>
+					<th>E-mail</th>
+					<td><span id="regEmail"></span></td>
+			  </tr>
+			  <tr>
+					<th>Phone</th>
+					<td><span id="regPhone"></span></td>
+			  </tr>
+			  <tr>
+					<th>Session</th>
+					<td><span id="regSession"></span></td>
+			  </tr>
+			  <tr>
+					<th>Banquet Guests ($55 ea.)</th>
+					<td><span id="regBanquet"></span></td>
+			  </tr>
+			  <tr>
+					<th>Media Pack ($115)</th>
+					<td><span id="regPack"></span></td>
+			  </tr>
+			  <tr>
+					<th>TOTAL</th>
+					<td><span id="regTotal"></span></td>
+			  </tr>
+		</table>
+  </aside>
 
     <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
