--- a/about.html
+++ b/about.html
@@ -65,8 +65,38 @@
 				</li>
             </ul>
         </nav>
-    </header>
+	</header>
 
+	<div class="home">
+            <div class="home_background" style="background-image:url(background_2.jpg)"></div>
+            <div class="slogan_content">
+                <div class="slogan_content_inner" id="slogan_content_inner">
+                    <div class="slogan_text_large">Easy Breezy</div>
+                    <div class="slogan_text_small">Zephyr Airlines</div>
+                </div>
+            </div>
+	</div>
+	
+	<footer>
+		<div class="container">
+			<!-- row 1 -->
+			<div class="row">
+				<!-- column 1 -->
+				<div class="col-lg-4">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit soluta quos!
+				</div>
+				<!-- column 2 -->
+				<div class="col-lg-4">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit soluta quos!
+				</div>
+				<!-- column 3 -->
+				<div class="col-lg-4">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit soluta quos!
+				</div>
+			</div>
+		</div>
+	</footer>
+	
 	<!-- <script src="app.js"></script> -->
 	<!-- <script src="request.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
