--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="slogan_content">
                 <div class="slogan_content_inner" id="slogan_content_inner">
                     <div class="slogan_text_large">Easy Breezy</div>
-                    <div class="slogan_text_small">Cover Girl</div>
+                    <div class="slogan_text_small">Zephyr Airlines</div>
                 </div>
             </div>
 	</div>
