Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="">
+	<header>
+	        <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="">
             <a class="navbar-brand" href="index.html">
                 <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
             </a>
@@ -67,7 +68,7 @@
     </header>
 
     <div class="home">
-            <div class="home_background" style="background-image:url(background_2.jpg)"></div>
+            <div class="home_background"></div>
             <div class="slogan_content">
                 <div class="slogan_content_inner" id="slogan_content_inner">
                     <div class="slogan_text_large">Easy Breezy</div>
