Footer on EVERY page
added the footer to every page

--- a/contact.html
+++ b/contact.html
@@ -2,36 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Contact us</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="app.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Contact us</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="app.css" />
 
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
-            <a class="navbar-brand" href="index.html">
-                <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
-            </a>
-            <ul class="main_nav_list">
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
+			<a class="navbar-brand" href="index.html">
+				<img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
+			</a>
+			<ul class="main_nav_list">
 				<li class="main_nav_item">
 					<div class="section">
 						<div class="section__item">
 							<a href="index.html" class="sm-link sm-link_padding sm-link1">
 								<span class="sm-link__label">Home</span>
-							</a>
-						</div>
-					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="about.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">About Us</span>
 							</a>
 						</div>
 					</div>
@@ -63,20 +55,70 @@
 						</div>
 					</div>
 				</li>
-            </ul>
-        </nav>
-    </header>
+				<li class="main_nav_item">
+					<div class="section">
+						<div class="section__item">
+							<a href="about.html" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">About Us</span>
+							</a>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-    <script src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+	<footer>
+		<div class="container">
+			<!-- row 1 -->
+			<div class="row">
+				<!-- column 1 -->
+				<div class="col-lg-4">
+					<!-- Info -->
+					<div class="info">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+				<!-- column 2 -->
+				<div class="col-lg-4">
+					<!-- Phone Number/Basic Info -->
+					<div class="Phone">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+				<!-- column 3 -->
+				<div class="col-lg-4">
+					<!-- Social Medias -->
+					<div class="socials">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<script src="app.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
