--- a/offers.html
+++ b/offers.html
@@ -6,9 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>Offers</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="app.css" />
-	
+
 </head>
 
 <body>
@@ -23,15 +24,6 @@
 						<div class="section__item">
 							<a href="index.html" class="sm-link sm-link_padding sm-link1">
 								<span class="sm-link__label">Home</span>
-							</a>
-						</div>
-					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="about.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">About Us</span>
 							</a>
 						</div>
 					</div>
@@ -63,11 +55,20 @@
 						</div>
 					</div>
 				</li>
+				<li class="main_nav_item">
+					<div class="section">
+						<div class="section__item">
+							<a href="about.html" class="sm-link sm-link_padding sm-link1">
+								<span class="sm-link__label">About Us</span>
+							</a>
+						</div>
+					</div>
+				</li>
 			</ul>
 		</nav>
 	</header>
-<!-- 
-	<section id="section1">
+	<!-- 
+		<section id="section1">
 		<form id="regForm" name="regForm" method="post"></form>
 		action="mas_reg2.html"
 		<h1>MAS22 Registration Form</h1>
@@ -90,7 +91,7 @@
 		</fieldset> 
 	-->
 
-<!-- 
+	<!-- 
 		<fieldset id="confChoices">
 			<label for="sessionBox">Session Packs</label>
 			<select id="sessionBox" name="sessionOption" size="5" required>
@@ -149,6 +150,47 @@
 			</tr>
 		</table>
 	</aside> -->
+
+	<footer>
+		<div class="container">
+			<!-- row 1 -->
+			<div class="row">
+				<!-- column 1 -->
+				<div class="col-lg-4">
+					<!-- Info -->
+					<div class="info">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+				<!-- column 2 -->
+				<div class="col-lg-4">
+					<!-- Phone Number/Basic Info -->
+					<div class="Phone">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+				<!-- column 3 -->
+				<div class="col-lg-4">
+					<!-- Social Medias -->
+					<div class="socials">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="app.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
