--- a/index.html
+++ b/index.html
@@ -2,97 +2,99 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Zephyr Airlines</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="app.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Zephyr Airlines</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="app.css" />
 
 </head>
 
 <body>
-        <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="">
-            <a class="navbar-brand" href="index.html">
-                <img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
-            </a>
-            <ul class="main_nav_list">
-				<li class="main_nav_item active">
-					<div class="section">
-						<div class="section__item">
-							<a href="index.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">Home</span>
-							</a>
-						</div>
+	<nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="">
+		<a class="navbar-brand" href="index.html">
+			<img src="Zephyr_Airline_Logo.png" alt="Logo" id="nav_logo">
+		</a>
+		<ul class="main_nav_list">
+			<li class="main_nav_item active">
+				<div class="section">
+					<div class="section__item">
+						<a href="index.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Home</span>
+						</a>
 					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="about.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">About Us</span>
-							</a>
-						</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="offers.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Offers</span>
+						</a>
 					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="offers.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">Offers</span>
-							</a>
-						</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="news.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">News</span>
+						</a>
 					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="news.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">News</span>
-							</a>
-						</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="contact.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">Contact</span>
+						</a>
 					</div>
-				</li>
-				<li class="main_nav_item">
-					<div class="section">
-						<div class="section__item">
-							<a href="contact.html" class="sm-link sm-link_padding sm-link1">
-								<span class="sm-link__label">Contact</span>
-							</a>
-						</div>
+				</div>
+			</li>
+			<li class="main_nav_item">
+				<div class="section">
+					<div class="section__item">
+						<a href="about.html" class="sm-link sm-link_padding sm-link1">
+							<span class="sm-link__label">About Us</span>
+						</a>
 					</div>
-				</li>
-            </ul>
-        </nav>
-    </header>
+				</div>
+			</li>
+		</ul>
+	</nav>
+	</header>
 
-    <div class="home">
-            <div class="home_background" style="background-image:url(background_2.jpg)"></div>
-            <div class="slogan_content">
-                <div class="slogan_content_inner" id="slogan_content_inner">
-                    <div class="slogan_text_large">Easy Breezy</div>
-                    <div class="slogan_text_small">Zephyr Airlines</div>
-                </div>
-            </div>
+	<div class="home">
+		<div class="home_background" style="background-image:url(background_2.jpg)"></div>
+		<div class="slogan_content">
+			<div class="slogan_content_inner" id="slogan_content_inner">
+				<div class="slogan_text_large">Easy Breezy</div>
+				<div class="slogan_text_small">Zephyr Airlines</div>
+			</div>
+		</div>
 	</div>
-<div class="jumbotron jumbotron-fluid">
-	<div class="container">
-		<h1 class="display-3">Zephyr Airlines</h1>
-		<p class="lead">Easy... Breezy</p>
-		<hr class="my-2">
-		<p>More info</p>
-		<p class="lead">
-			<a class="btn btn-primary btn-lg" href="" role="button">Jumbo action name</a>
-		</p>
+
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<h1 class="display-3">Zephyr Airlines</h1>
+			<p class="lead">Easy... Breezy</p>
+			<hr class="my-2">
+			<p>More info</p>
+			<p class="lead">
+				<a class="btn btn-primary btn-lg" href="" role="button">Jumbo action name</a>
+			</p>
+		</div>
 	</div>
-</div>
-<table class="table table-hover table-inverse table-responsive">
-	<thead class="thead-inverse">
-		<tr>
-			<th>hello</th>
-			<th>hello</th>
-			<th>hello</th>
-		</tr>
+	<table class="table table-hover table-inverse table-responsive">
+		<thead class="thead-inverse">
+			<tr>
+				<th>hello</th>
+				<th>hello</th>
+				<th>hello</th>
+			</tr>
 		</thead>
 		<tbody>
 			<tr>
@@ -106,25 +108,67 @@
 				<td>hello</td>
 			</tr>
 		</tbody>
-</table>
+	</table>
 
-<!-- Search Bar  -->
+	<!-- Search Bar  -->
 
-<form id="content">
-	<input type="text" name="input" class="input" id="search-input">
-	<button type="reset" class="search" id="search-btn"></button>
-  </form>
-<!--  -->
-    <script src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+	<form id="content">
+		<input type="text" name="input" class="input" id="search-input">
+		<button type="reset" class="search" id="search-btn"></button>
+	</form>
+	<!--  -->
+
+	<footer>
+		<div class="container">
+			<!-- row 1 -->
+			<div class="row">
+				<!-- column 1 -->
+				<div class="col-lg-4">
+					<!-- Info -->
+					<div class="info">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+				<!-- column 2 -->
+				<div class="col-lg-4">
+					<!-- Phone Number/Basic Info -->
+					<div class="Phone">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+				<!-- column 3 -->
+				<div class="col-lg-4">
+					<!-- Social Medias -->
+					<div class="socials">
+						<div class="footerTitle">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
+							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
+							soluta quos!
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<script src="app.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+	</script>
 </body>
 
 </html>
