--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
 					<!-- Info -->
 					<div class="info">
 						<div class="footerTitle">
+							uhhhhhhhh
+							</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
 							soluta quos!
-						</div>
 					</div>
 				</div>
 				<!-- column 2 -->
@@ -140,10 +141,11 @@
 					<!-- Phone Number/Basic Info -->
 					<div class="Phone">
 						<div class="footerTitle">
+						Nu Phuong	
+						</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
 							soluta quos!
-						</div>
 					</div>
 				</div>
 				<!-- column 3 -->
@@ -151,10 +153,11 @@
 					<!-- Social Medias -->
 					<div class="socials">
 						<div class="footerTitle">
+						gravy
+						</div>
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione vitae et at ullam deleniti
 							eius sunt quidem eos? Cumque veniam aspernatur, ducimus adipisci in incidunt quae vitae odit
 							soluta quos!
-						</div>
 					</div>
 				</div>
 			</div>
