--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,16 @@
 		</nav>
 	</header>
 
+	<div class="home">
+            <div class="home_background"></div>
+            <div class="slogan_content">
+                <div class="slogan_content_inner" id="slogan_content_inner">
+                    <div class="slogan_text_large">Easy Breezy</div>
+                    <div class="slogan_text_small">Zephyr Airlines</div>
+                </div>
+            </div>
+	</div>
+
 	<footer>
 		<div class="container">
 			<!-- row 1 -->
